Seguinmiento de los mapas con google de nuevo.

--- a/localizator/src/index.html
+++ b/localizator/src/index.html
@@ -7,6 +7,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8l1rN0PWx-ABg5ryh35dTpJ-dHkOxVxc&libraries=places&language=es&region=ES"></script>
         <script>
             localStorage.setItem("serverUrl", "http://localhost:8050/Bus/");
             localStorage.setItem("socketDir", "ws://localhost:8050/Bus/localizator/");
