--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,14 +13,9 @@
             localStorage.setItem("serverUrl", "http://localhost:8050/Bus/");
             localStorage.setItem("socketDir", "ws://localhost:8050/Bus/localizator/");
         </script>
-        <link rel="stylesheet" href="styles.eaf4e624c5299acdf0bb.css">
-    </head>
+    <link rel="stylesheet" href="styles.eaf4e624c5299acdf0bb.css"></head>
     <body class="animated fadeIn" id="dashboards-analytics" data-layout="default-sidebar-1" data-sidebar="primary" data-navbar="primary" data-controller="dashboards" data-view="analytics" #body>
         <app-root></app-root>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.20.1/ol.js" type="text/javascript"></script>
-        <script type="text/javascript" src="runtime.1b035b95acc1c127324d.js"></script>
-        <script type="text/javascript" src="polyfills.c1da48c5c45ccdef1eb4.js"></script>
-        <script type="text/javascript" src="scripts.cb8c365d18dac55a86e1.js"></script>
-        <script type="text/javascript" src="main.150de51f9821cc93f614.js"></script>
-    </body>
+    <script type="text/javascript" src="runtime.1b035b95acc1c127324d.js"></script><script type="text/javascript" src="polyfills.c1da48c5c45ccdef1eb4.js"></script><script type="text/javascript" src="scripts.cb8c365d18dac55a86e1.js"></script><script type="text/javascript" src="main.150de51f9821cc93f614.js"></script></body>
 </html>
