Add Devicesto Traccar

--- a/localizator/src/index.html
+++ b/localizator/src/index.html
@@ -6,7 +6,7 @@
         <base href="/">
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="icon" type="image/x-icon" href="assets/favicon.png">
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8l1rN0PWx-ABg5ryh35dTpJ-dHkOxVxc&libraries=places&language=es&region=ES"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.20.1/ol.css" type="text/css">
         <script>
