--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,16 +6,16 @@
         <base href="/">
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="icon" type="image/x-icon" href="assets/favicon.png">
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8l1rN0PWx-ABg5ryh35dTpJ-dHkOxVxc&libraries=places&language=es&region=ES"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.20.1/ol.css" type="text/css">
         <script>
             localStorage.setItem("serverUrl", "http://localhost:8050/Bus/");
             localStorage.setItem("socketDir", "ws://localhost:8050/Bus/localizator/");
         </script>
-    <link rel="stylesheet" href="styles.eaf4e624c5299acdf0bb.css"></head>
+    <link rel="stylesheet" href="styles.479f7007244d82d21b63.css"></head>
     <body class="animated fadeIn" id="dashboards-analytics" data-layout="default-sidebar-1" data-sidebar="primary" data-navbar="primary" data-controller="dashboards" data-view="analytics" #body>
         <app-root></app-root>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.20.1/ol.js" type="text/javascript"></script>
-    <script type="text/javascript" src="runtime.1b035b95acc1c127324d.js"></script><script type="text/javascript" src="polyfills.c1da48c5c45ccdef1eb4.js"></script><script type="text/javascript" src="scripts.cb8c365d18dac55a86e1.js"></script><script type="text/javascript" src="main.150de51f9821cc93f614.js"></script></body>
+    <script type="text/javascript" src="runtime.bbd0bc7b7fda901866f3.js"></script><script type="text/javascript" src="polyfills.4e4f5d9984e68bbc2d17.js"></script><script type="text/javascript" src="scripts.cee6f10cb6d1afd436fc.js"></script><script type="text/javascript" src="main.ee9e4df3890ab3ba7331.js"></script></body>
 </html>
